--- a/index.html
+++ b/index.html
@@ -103,20 +103,24 @@ Have fun creating your portfolio on this template!!! -->
   <body>
     <!-- Hero Section -->
     <div id="hero">
-      <section class="container">
-        <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Lucas <span class="text-color-main name glow">Lalumière</span></span>
-          <br />
-          Developer | Ethical Hacker
-        </h1>
-        <p class="hero-cta">
-          <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
-        </p>
-      </section>
-      <a href="#about" class="scroll-down-link" aria-label="scroll-down">
-        <div class="scroll-down"></div
-      ></a>
-    </div>
+        <video autoplay muted loop id="hero-video">
+          <source src="./assets/853919-hd_1920_1080_25fps.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <section class="container">
+          <h1 class="hero-title">
+            Hi, my name is <span class="text-color-main name">Lucas <span class="text-color-main name glow">Lalumière</span></span>
+            <br />
+            Developer | Ethical Hacker
+          </h1>
+          <p class="hero-cta">
+            <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
+          </p>
+        </section>
+        <a href="#about" class="scroll-down-link" aria-label="scroll-down">
+          <div class="scroll-down"></div>
+        </a>
+      </div>
     <!-- /END Hero Section -->
 
     <!-- About Section -->
@@ -145,7 +149,7 @@ Have fun creating your portfolio on this template!!! -->
                 Recognizing the countless hours I spent deepening my knowledge beyond the classroom, I set a lifelong goal to dive into the vast field of cybersecurity and contribute to its future, one step at a time.   
             </p>
             <span class="about-wrapper__cta">
-              <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="" class="cta-btn cta-btn--resume">View Resume</a>
             </span>
           </div>
         </div>
