--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Have fun creating your portfolio on this template!!! -->
                 Recognizing the countless hours I spent deepening my knowledge beyond the classroom, I set a lifelong goal to dive into the vast field of cybersecurity and contribute to its future, one step at a time.   
             </p>
             <span class="about-wrapper__cta">
-              <a href="" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Resume</a>
             </span>
           </div>
         </div>
