--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ Have fun creating your portfolio on this template!!! -->
     <!-- link tags -->
     <link rel="preload" as="style" href="./css/main.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="preload" as="style" href="./css/github-button.css" />
+    <link rel="stylesheet" href="./css/github-button.css" />
 
     <!-- FontAwesome Icons link -->
     <link
@@ -134,8 +136,8 @@ Have fun creating your portfolio on this template!!! -->
               class="img-fluid"
               src="./assets/profile.png"
               alt="Profile Image"
-              width="450"
-              height="350"
+              width="550"
+              height="450"
             />
           </div>
           <div class="about-wrapper__info">
@@ -167,12 +169,11 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">The PwnPal</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                Creating a pocket-sized network pentesting device using Raspberry Pi. Integrated with
+                Kali Linux, the ‘PwnPal’ offers standalone power, an integrated touch display, and the
+                flexibility to conduct on-the-go ethical hacking procedures.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
@@ -180,10 +181,11 @@ Have fun creating your portfolio on this template!!! -->
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
-                  >See Live</a
-                >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
-                  >Source Code</a
+                  >
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z" fill="white"></path>
+                    </svg>
+                  See Live</a
                 >
               </div>
             </div>
@@ -207,12 +209,12 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">Google Captive Portal</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                This project is an experiment to understand and expose phishing, one of the most common cyber attacks. 
+                Phishing fools users into inputting their personal information in interfaces crafted to imitate well known platforms. 
+                Using a Flipper Zero, an ESP32 WIFI module and the HTML file within this repo, you can create a dummy phishing attack to see what goes on under the hood! 
+                Check out the repo for instructions.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
@@ -232,7 +234,7 @@ Have fun creating your portfolio on this template!!! -->
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/!Google.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
