--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">The PwnPal</h3>
               <p class="project-wrapper__text-info">
+                <i>Jan 2024 - Present</i>
+                <br><br>
                 Creating a pocket-sized network pentesting device using Raspberry Pi. Integrated with
                 Kali Linux, the ‘PwnPal’ offers standalone power, an integrated touch display, and the
                 flexibility to conduct on-the-go ethical hacking procedures.
@@ -182,17 +184,14 @@ Have fun creating your portfolio on this template!!! -->
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.205 23.682C8.805 23.795 9.025 23.424 9.025 23.105C9.025 22.82 9.015 22.065 9.01 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.95 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z" fill="white"></path>
-                    </svg>
-                  See Live</a
+                  View on Github</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
               <a href="#" target="_blank" rel="noopener noreferrer">
-                <div class="thumbnail rounded">
+                <div class="thumbnail rounded " data-hover="./assets/!Google.png">
                   <img
                     src="./assets/PwnPal.png"
                     class="img-fluid"
@@ -211,10 +210,10 @@ Have fun creating your portfolio on this template!!! -->
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Google Captive Portal</h3>
               <p class="project-wrapper__text-info">
-                This project is an experiment to understand and expose phishing, one of the most common cyber attacks. 
-                Phishing fools users into inputting their personal information in interfaces crafted to imitate well known platforms. 
+                <i>Jul 2023 - Nov 2023</i>
+                <br><br>
+                A 1:1 realistic Google captive portal for Phishing on a Flipper-Zero.
                 Using a Flipper Zero, an ESP32 WIFI module and the HTML file within this repo, you can create a dummy phishing attack to see what goes on under the hood! 
-                Check out the repo for instructions.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
@@ -290,6 +289,40 @@ Have fun creating your portfolio on this template!!! -->
     </section>
     <!-- End Projects Section -->
 
+    <!-- Experience Section -->
+    <section id="experience">
+      <div class="container">
+        <h2 class="section-title">Experience</h2>
+        <div class="row experience-wrapper">
+          <div class="experience-wrapper__image">
+            <img
+              class="img-fluid"
+              src="./assets/rbc.png"
+              alt="Profile Image"
+              width="550"
+              height="450"
+            />
+          </div>
+          <div class="experience-wrapper__info">
+            <h3 class="experience-wrapper__text-title">Developer - Identity and Access Management</h3>
+            <p class="experience-wrapper__info-text">
+                <kbd>Royal Bank of Canada - Internship</kbd>
+                <br><br>
+                I’m an ambitious Computer Science student at John Abbott College and I love to experiment with cybersecurity and ethical hacking.
+             
+            </p>
+            <p class="experience-wrapper__info-text">
+                From the age of 10, I began exploring tech by creating a YouTube channel to share Roblox coding tutorials and game bugs/exploits. 
+                Recognizing the countless hours I spent deepening my knowledge beyond the classroom, I set a lifelong goal to dive into the vast field of cybersecurity and contribute to its future, one step at a time.   
+            </p>
+            <span class="experience-wrapper__cta">
+              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Resume</a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
@@ -301,6 +334,9 @@ Have fun creating your portfolio on this template!!! -->
       </div>
     </section>
     <!-- END Contact Section -->
+
+
+
 
     <!-- Footer Section -->
     <footer class="footer">
@@ -352,12 +388,12 @@ Have fun creating your portfolio on this template!!! -->
         </div>
         <hr />
         <p class="footer__text">
-          &copy; <span id="year"></span> - Template by
+          &copy; <span id="year"></span> - Made by
           <a
-            href="https://github.com/AnilSeervi"
+            href="https://github.com/Shlucus"
             target="_blank"
             rel="noopener noreferrer"
-            >Anil Seervi</a
+            >Lucas Lalumière</a
           >. <br />Made with &hearts;
         </p>
       </div>
