Fixed Experience section for mobile

--- a/index.html
+++ b/index.html
@@ -183,9 +183,7 @@ Have fun creating your portfolio on this template!!! -->
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
-                  >
-                  View on Github</a
-                >
+                  >View Repo</a>
               </div>
             </div>
 
@@ -299,26 +297,60 @@ Have fun creating your portfolio on this template!!! -->
               class="img-fluid"
               src="./assets/rbc.png"
               alt="Profile Image"
-              width="550"
-              height="450"
+              width="350"
+              height="350"
             />
           </div>
           <div class="experience-wrapper__info">
             <h3 class="experience-wrapper__text-title">Developer - Identity and Access Management</h3>
             <p class="experience-wrapper__info-text">
-                <kbd>Royal Bank of Canada - Internship</kbd>
-                <br><br>
-                I’m an ambitious Computer Science student at John Abbott College and I love to experiment with cybersecurity and ethical hacking.
-             
+                <i>Royal Bank of Canada - Internship</i>
             </p>
             <p class="experience-wrapper__info-text">
-                From the age of 10, I began exploring tech by creating a YouTube channel to share Roblox coding tutorials and game bugs/exploits. 
-                Recognizing the countless hours I spent deepening my knowledge beyond the classroom, I set a lifelong goal to dive into the vast field of cybersecurity and contribute to its future, one step at a time.   
+              <ul class="experience-wrapper__bullet">
+                  <li>Collaborated with IAM Systems Engineering in SCRUM to develop ServiceNow applications in JavaScript.</li>
+                  <li><b>Optimized 10+ catalog items</b>, user portals, and workflows in ServiceNow, enhancing internal service processes.</li>
+                  <li><b>Discovered and resolved an attack vector</b> within RBC’s physical access request form, reducing the risk of
+                    unauthorized physical access of threat actors.</li>
+                </ul>  
             </p>
+
             <span class="experience-wrapper__cta">
-              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
             </span>
           </div>
+        </div>
+        <div class="row experience-wrapper">
+          <div class="experience-wrapper__image">
+            <img
+              class="img-fluid"
+              src="./assets/rbc.png"
+              alt="Profile Image"
+              width="350"
+              height="350"
+            />
+          </div>
+          <div class="experience-wrapper__info">
+            <h3 class="experience-wrapper__text-title">Developer - Identity and Access Management</h3>
+            <p class="experience-wrapper__info-text">
+                <i>Royal Bank of Canada - Internship</i>
+            </p>
+            <p class="experience-wrapper__info-text">
+              <ul class="experience-wrapper__bullet">
+                  <li>Collaborated with IAM Systems Engineering in SCRUM to develop ServiceNow applications in JavaScript.</li>
+                  <li><b>Optimized 10+ catalog items</b>, user portals, and workflows in ServiceNow, enhancing internal service processes.</li>
+                  <li><b>Discovered and resolved an attack vector</b> within RBC’s physical access request form, reducing the risk of
+                    unauthorized physical access of threat actors.</li>
+                </ul>  
+            </p>
+
+            <span class="experience-wrapper__cta">
+              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
+            </span>
+          </div>
+          <span class="experience-wrapper__cta">
+            <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
+          </span>
         </div>
       </div>
     </section>
