--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Have fun creating your portfolio on this template!!! -->
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://github.com/Shlucus/ThePwnPal"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
@@ -215,13 +215,13 @@ Have fun creating your portfolio on this template!!! -->
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://github.com/Shlucus/FlipperZero-GooglePortal"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/Shlucus/FlipperZero-GooglePortal" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
