removed resume boxes for each experience

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Have fun creating your portfolio on this template!!! -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <article class="row">
+          <!-- <article class="row">
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Project Title</h3>
               <p class="project-wrapper__text-info">
@@ -280,7 +280,7 @@ Have fun creating your portfolio on this template!!! -->
                 </div>
               </a>
             </div>
-          </article>
+          </article> -->
           <!-- /END Project -->
         </div>
       </div>
@@ -314,10 +314,6 @@ Have fun creating your portfolio on this template!!! -->
                     unauthorized physical access of threat actors.</li>
                 </ul>  
             </p>
-
-            <span class="experience-wrapper__cta">
-              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
-            </span>
           </div>
         </div>
         <div class="row experience-wrapper">
@@ -343,11 +339,9 @@ Have fun creating your portfolio on this template!!! -->
                     unauthorized physical access of threat actors.</li>
                 </ul>  
             </p>
-
-            <span class="experience-wrapper__cta">
-              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
-            </span>
           </div>
+        </div>
+        <div>
           <span class="experience-wrapper__cta">
             <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
           </span>
