--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@ Have fun creating your portfolio on this template!!! -->
       referrerpolicy="no-referrer"
     />
     <script defer src="./javascript/scrollreveal.min.js"></script>
+    <script defer src="./javascript/typewritter.js"></script>
     <script
       defer
       type="text/javascript"
@@ -113,12 +114,13 @@ Have fun creating your portfolio on this template!!! -->
         <section class="container">
           <h1 class="hero-title">
             Hi, my name is <span class="text-color-main name">Lucas <span class="text-color-main name glow">Lalumière</span></span>
-            <br />
-            Developer | Ethical Hacker
           </h1>
-          <p class="hero-cta">
+          <h2 class="hero-title" id="demo">
+            
+          </h2>
+          <!-- <p class="hero-cta about-wrapper__info-text">
             <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
-          </p>
+          </p> -->
         </section>
         <a href="#about" class="scroll-down-link" aria-label="scroll-down">
           <div class="scroll-down"></div>
@@ -152,7 +154,7 @@ Have fun creating your portfolio on this template!!! -->
                 Recognizing the countless hours I spent deepening my knowledge beyond the classroom, I set a lifelong goal to dive into the vast field of cybersecurity and contribute to its future, one step at a time.   
             </p>
             <span class="about-wrapper__cta">
-              <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="https://www.linkedin.com/in/lucas-lalumi%C3%A8re/" class="cta-btn cta-btn--resume">Lets connect!</a>
             </span>
           </div>
         </div>
@@ -327,21 +329,21 @@ Have fun creating your portfolio on this template!!! -->
             />
           </div>
           <div class="experience-wrapper__info">
-            <h3 class="experience-wrapper__text-title">Developer - Identity and Access Management</h3>
+            <h3 class="experience-wrapper__text-title">Director of Technology - JACHacks</h3>
             <p class="experience-wrapper__info-text">
-                <i>Royal Bank of Canada - Internship</i>
+                <i>John Abbott College</i>
             </p>
             <p class="experience-wrapper__info-text">
               <ul class="experience-wrapper__bullet">
-                  <li>Collaborated with IAM Systems Engineering in SCRUM to develop ServiceNow applications in JavaScript.</li>
-                  <li><b>Optimized 10+ catalog items</b>, user portals, and workflows in ServiceNow, enhancing internal service processes.</li>
-                  <li><b>Discovered and resolved an attack vector</b> within RBC’s physical access request form, reducing the risk of
-                    unauthorized physical access of threat actors.</li>
+                  <li>Co-founded John Abbott College’s first-ever hackathon with 4 other students (student-run).</li>
+                  <li>Led Agile development of the JACHacks website using HTML, CSS, and JavaScript.</li>
+                  <li>Made email templates using HTML/CSS and automated mass submissions using Thunderbird.</li>
+                  <li><b>Attracted 130+ students</b> to compete, achieving a <b>95% satisfaction rate on feedback forms.</b></li>
                 </ul>  
             </p>
           </div>
         </div>
-        <div>
+        <div class="experience-center-box">
           <span class="experience-wrapper__cta">
             <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
           </span>
