added JACHacks image

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ Have fun creating your portfolio on this template!!! -->
                 Recognizing the countless hours I spent deepening my knowledge beyond the classroom, I set a lifelong goal to dive into the vast field of cybersecurity and contribute to its future, one step at a time.   
             </p>
             <span class="about-wrapper__cta">
+              
               <a href="https://www.linkedin.com/in/lucas-lalumi%C3%A8re/" class="cta-btn cta-btn--resume">Lets connect!</a>
             </span>
           </div>
@@ -322,7 +323,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="experience-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/rbc.png"
+              src="./assets/JACHacks.png"
               alt="Profile Image"
               width="350"
               height="350"
@@ -331,7 +332,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="experience-wrapper__info">
             <h3 class="experience-wrapper__text-title">Director of Technology - JACHacks</h3>
             <p class="experience-wrapper__info-text">
-                <i>John Abbott College</i>
+                <i>John Abbott College - Seasonal</i>
             </p>
             <p class="experience-wrapper__info-text">
               <ul class="experience-wrapper__bullet">
@@ -367,9 +368,10 @@ Have fun creating your portfolio on this template!!! -->
               <p class="contact-wrapper__text number"><a ref="mailto:lucas.lalum@gmail.com" aria-label="Send an email to lucas.lalum@gmail.com">lucas.lalum@gmail.com</a></p>
             </div>
           </div>
-            <a href="mailto:
-          <a href="mailto:lucas.lalum@gmail.com" class="cta-btn cta-btn--resume">Call to Action</a>
+            <!-- <a href="mailto:
+          <a href="mailto:lucas.lalum@gmail.com" class="cta-btn cta-btn--resume">Call to Action</a> -->
           <div class="social-links">
+            
             <!-- <a
               href="#!"
               target="_blank"
