added projects images redirectable

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Have fun creating your portfolio on this template!!! -->
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/Shlucus/ThePwnPal" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded " data-hover="./assets/!Google.png">
                   <img
                     src="./assets/PwnPal.png"
@@ -231,7 +231,7 @@ Have fun creating your portfolio on this template!!! -->
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/Shlucus/FlipperZero-GooglePortal" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
                     src="./assets/!Google.png"
