fixed weird blue coloring on mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Have fun creating your portfolio on this template!!! -->
     <link rel="icon" type="image/png" href="./assets/lightbulb_logo.png" />
 
     <!-- Add your primary-theme color for the value of content -->
-    <meta name="theme-color" content="#36d1dc" />
+    <meta name="theme-color" content="#edb200" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
