Added volunteering placholders

--- a/index.html
+++ b/index.html
@@ -344,6 +344,58 @@ Have fun creating your portfolio on this template!!! -->
             </p>
           </div>
         </div>
+        <div class="row experience-wrapper">
+          <div class="experience-wrapper__info">
+            <h3 class="experience-wrapper__text-title"> - JACHacks</h3>
+            <p class="experience-wrapper__info-text">
+                <i>John Abbott College - Seasonal</i>
+            </p>
+            <p class="experience-wrapper__info-text">
+              <ul class="experience-wrapper__bullet">
+                  <li>Co-founded John Abbott College’s first-ever hackathon with 4 other students (student-run).</li>
+                  <li>Led Agile development of the JACHacks website using HTML, CSS, and JavaScript.</li>
+                  <li>Made email templates using HTML/CSS and automated mass submissions using Thunderbird.</li>
+                  <li><b>Attracted 130+ students</b> to compete, achieving a <b>95% satisfaction rate on feedback forms.</b></li>
+                </ul>  
+            </p>
+          </div>
+          <div class="experience-wrapper__image">
+            <img
+              class="img-fluid"
+              src="./assets/JACHacks.png"
+              alt="Profile Image"
+              width="350"
+              height="350"
+            />
+          </div>
+        </div>
+
+        <div class="row experience-wrapper">
+          <div class="experience-wrapper__info">
+            <h3 class="experience-wrapper__text-title">Director of Technology - JACHacks</h3>
+            <p class="experience-wrapper__info-text">
+                <i>John Abbott College - Seasonal</i>
+            </p>
+            <p class="experience-wrapper__info-text">
+              <ul class="experience-wrapper__bullet">
+                  <li>Co-founded John Abbott College’s first-ever hackathon with 4 other students (student-run).</li>
+                  <li>Led Agile development of the JACHacks website using HTML, CSS, and JavaScript.</li>
+                  <li>Made email templates using HTML/CSS and automated mass submissions using Thunderbird.</li>
+                  <li><b>Attracted 130+ students</b> to compete, achieving a <b>95% satisfaction rate on feedback forms.</b></li>
+                </ul>  
+            </p>
+          </div>
+          <div class="experience-wrapper__image">
+            <img
+              class="img-fluid"
+              src="./assets/JACHacks.png"
+              alt="Profile Image"
+              width="350"
+              height="350"
+            />
+          </div>
+        </div>
+        
         <div class="experience-center-box">
           <span class="experience-wrapper__cta">
             <a href="./assets/Resume/LalumièreLucas.pdf" class="cta-btn cta-btn--resume">View Full Resume</a>
