added Community lead volunteering

--- a/index.html
+++ b/index.html
@@ -344,11 +344,12 @@ Have fun creating your portfolio on this template!!! -->
             </p>
           </div>
         </div>
+
         <div class="row experience-wrapper">
           <div class="experience-wrapper__info">
-            <h3 class="experience-wrapper__text-title"> - JACHacks</h3>
+            <h3 class="experience-wrapper__text-title">STL Program Mentor</h3>
             <p class="experience-wrapper__info-text">
-                <i>John Abbott College - Seasonal</i>
+                <i>RBC Student Tech Labs (STL)</i>
             </p>
             <p class="experience-wrapper__info-text">
               <ul class="experience-wrapper__bullet">
@@ -370,31 +371,33 @@ Have fun creating your portfolio on this template!!! -->
           </div>
         </div>
 
+
         <div class="row experience-wrapper">
           <div class="experience-wrapper__info">
-            <h3 class="experience-wrapper__text-title">Director of Technology - JACHacks</h3>
+            <h3 class="experience-wrapper__text-title">Community Lead</h3>
             <p class="experience-wrapper__info-text">
-                <i>John Abbott College - Seasonal</i>
+                <i>RBC T&O Program</i>
             </p>
             <p class="experience-wrapper__info-text">
               <ul class="experience-wrapper__bullet">
-                  <li>Co-founded John Abbott College’s first-ever hackathon with 4 other students (student-run).</li>
-                  <li>Led Agile development of the JACHacks website using HTML, CSS, and JavaScript.</li>
-                  <li>Made email templates using HTML/CSS and automated mass submissions using Thunderbird.</li>
-                  <li><b>Attracted 130+ students</b> to compete, achieving a <b>95% satisfaction rate on feedback forms.</b></li>
+                  <li>Lead 80+ T&O students throughout RBC and facilitated engaging networking sessions and game nights, fostering a strong sense of community and connection among sports enthusiasts.</li>
+                  <li>Coordinate and manage social events, ensuring seamless execution and high participation rates, enhancing student engagement and satisfaction.</li>
+                  <li>Develop relationships with community members and partners, creating a supportive and dynamic environment for sports-related activities.</li>
                 </ul>  
             </p>
           </div>
           <div class="experience-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/JACHacks.png"
+              src="./assets/communityLead.png"
               alt="Profile Image"
               width="350"
               height="350"
             />
           </div>
         </div>
+
+
         
         <div class="experience-center-box">
           <span class="experience-wrapper__cta">
