added STL Mentor volunteering

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="experience-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/JACHacks.png"
+              src="./assets/STLMentor.png"
               alt="Profile Image"
               width="350"
               height="350"
