--- a/index.html
+++ b/index.html
@@ -222,12 +222,20 @@ Have fun creating your portfolio on this template!!! -->
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
+                  >View Repo</a>
+              </div>
+              <!-- <div class="project-wrapper__text-btns">
+                <a
+                  href="https://github.com/Shlucus/FlipperZero-GooglePortal"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
                 <a href="https://github.com/Shlucus/FlipperZero-GooglePortal" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
-              </div>
+              </div> -->
             </div>
 
             <div class="project-wrapper__image">
