Filled out STL content bullet points

--- a/index.html
+++ b/index.html
@@ -361,10 +361,8 @@ Have fun creating your portfolio on this template!!! -->
             </p>
             <p class="experience-wrapper__info-text">
               <ul class="experience-wrapper__bullet">
-                  <li>Co-founded John Abbott College’s first-ever hackathon with 4 other students (student-run).</li>
-                  <li>Led Agile development of the JACHacks website using HTML, CSS, and JavaScript.</li>
-                  <li>Made email templates using HTML/CSS and automated mass submissions using Thunderbird.</li>
-                  <li><b>Attracted 130+ students</b> to compete, achieving a <b>95% satisfaction rate on feedback forms.</b></li>
+                  <li>Mentored a high-school graduate from the RBC Student Tech Labs (STL) program.</li>
+                  <li>Provided advising on how to pursue a career in Tech as a student, landing internship opportunities, and expanding their social network.</li>
                 </ul>  
             </p>
           </div>
